base/spartakus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: spartakus
    app.kubernetes.io/component: spartakus
    app.kubernetes.io/instance: spartakus-v0.7.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: spartakus
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v0.7.0
    kustomize.component: spartakus
  name: spartakus-volunteer
  namespace: kubeflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: spartakus
      app.kubernetes.io/instance: spartakus-v0.7.0
      app.kubernetes.io/managed-by: kfctl
      app.kubernetes.io/name: spartakus
      app.kubernetes.io/part-of: kubeflow
      app.kubernetes.io/version: v0.7.0
      kustomize.component: spartakus
  template:
    metadata:
      labels:
        app: spartakus-volunteer
        app.kubernetes.io/component: spartakus
        app.kubernetes.io/instance: spartakus-v0.7.0
        app.kubernetes.io/managed-by: kfctl
        app.kubernetes.io/name: spartakus
        app.kubernetes.io/part-of: kubeflow
        app.kubernetes.io/version: v0.7.0
        kustomize.component: spartakus
    spec:
      containers:
      - args:
        - volunteer
        - --cluster-id=OoM1jei6on0aengu8gaey8phuap1gooz
        - --database=https://stats-collector.kubeflow.org
        image: gcr.io/google_containers/spartakus-amd64:v1.1.0
        name: volunteer
      serviceAccountName: spartakus
