base/kfserving-install.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "8443"
    prometheus.io/scheme: https
    prometheus.io/scrape: "true"
  labels:
    app.kubernetes.io/component: kfserving-install
    app.kubernetes.io/instance: kfserving-install-v0.7.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: kfserving-install
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v0.7.0
    control-plane: controller-manager
    controller-tools.k8s.io: "1.0"
    kustomize.component: kfserving
  name: kfserving-controller-manager-metrics-service
  namespace: kubeflow
spec:
  ports:
  - name: https
    port: 8443
    targetPort: https
  selector:
    app.kubernetes.io/component: kfserving-install
    app.kubernetes.io/instance: kfserving-install-v0.7.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: kfserving-install
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v0.7.0
    control-plane: controller-manager
    controller-tools.k8s.io: "1.0"
    kustomize.component: kfserving
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: kfserving-install
    app.kubernetes.io/instance: kfserving-install-v0.7.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: kfserving-install
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v0.7.0
    control-plane: kfserving-controller-manager
    controller-tools.k8s.io: "1.0"
    kustomize.component: kfserving
  name: kfserving-controller-manager-service
  namespace: kubeflow
spec:
  ports:
  - port: 443
  selector:
    app.kubernetes.io/component: kfserving-install
    app.kubernetes.io/instance: kfserving-install-v0.7.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: kfserving-install
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v0.7.0
    control-plane: kfserving-controller-manager
    controller-tools.k8s.io: "1.0"
    kustomize.component: kfserving
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: kfserving-install
    app.kubernetes.io/instance: kfserving-install-v0.7.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: kfserving-install
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v0.7.0
    control-plane: kfserving-controller-manager
    controller-tools.k8s.io: "1.0"
    kustomize.component: kfserving
  name: kfserving-controller-manager
  namespace: kubeflow
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: kfserving-install
      app.kubernetes.io/instance: kfserving-install-v0.7.0
      app.kubernetes.io/managed-by: kfctl
      app.kubernetes.io/name: kfserving-install
      app.kubernetes.io/part-of: kubeflow
      app.kubernetes.io/version: v0.7.0
      control-plane: kfserving-controller-manager
      controller-tools.k8s.io: "1.0"
      kustomize.component: kfserving
  serviceName: controller-manager-service
  template:
    metadata:
      labels:
        app.kubernetes.io/component: kfserving-install
        app.kubernetes.io/instance: kfserving-install-v0.7.0
        app.kubernetes.io/managed-by: kfctl
        app.kubernetes.io/name: kfserving-install
        app.kubernetes.io/part-of: kubeflow
        app.kubernetes.io/version: v0.7.0
        control-plane: kfserving-controller-manager
        controller-tools.k8s.io: "1.0"
        kustomize.component: kfserving
    spec:
      containers:
      - args:
        - --secure-listen-address=0.0.0.0:8443
        - --upstream=http://127.0.0.1:8080/
        - --logtostderr=true
        - --v=10
        image: gcr.io/kubebuilder/kube-rbac-proxy:v0.4.0
        name: kube-rbac-proxy
        ports:
        - containerPort: 8443
          name: https
      - args:
        - --metrics-addr=127.0.0.1:8080
        command:
        - /manager
        image: chanwit/kfserving-controller:latest
        imagePullPolicy: Always
        name: manager
        ports:
        - containerPort: 9876
          name: webhook-server
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 300Mi
          requests:
            cpu: 100m
            memory: 200Mi
        volumeMounts:
        - mountPath: /tmp/cert
          name: cert
          readOnly: true
      terminationGracePeriodSeconds: 10
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: kfserving-webhook-server-secret
  volumeClaimTemplates: []
