base/pytorch-operator.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/path: /metrics
    prometheus.io/port: "8443"
    prometheus.io/scrape: "true"
  labels:
    app: pytorch-operator
    app.kubernetes.io/component: pytorch
    app.kubernetes.io/instance: pytorch-operator-v0.7.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: pytorch-operator
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v0.7.0
    kustomize.component: pytorch-operator
  name: pytorch-operator
  namespace: kubeflow
spec:
  ports:
  - name: monitoring-port
    port: 8443
    targetPort: 8443
  selector:
    app.kubernetes.io/component: pytorch
    app.kubernetes.io/instance: pytorch-operator-v0.7.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: pytorch-operator
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v0.7.0
    kustomize.component: pytorch-operator
    name: pytorch-operator
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: pytorch
    app.kubernetes.io/instance: pytorch-operator-v0.7.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: pytorch-operator
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v0.7.0
    kustomize.component: pytorch-operator
  name: pytorch-operator
  namespace: kubeflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: pytorch
      app.kubernetes.io/instance: pytorch-operator-v0.7.0
      app.kubernetes.io/managed-by: kfctl
      app.kubernetes.io/name: pytorch-operator
      app.kubernetes.io/part-of: kubeflow
      app.kubernetes.io/version: v0.7.0
      kustomize.component: pytorch-operator
      name: pytorch-operator
  template:
    metadata:
      labels:
        app.kubernetes.io/component: pytorch
        app.kubernetes.io/instance: pytorch-operator-v0.7.0
        app.kubernetes.io/managed-by: kfctl
        app.kubernetes.io/name: pytorch-operator
        app.kubernetes.io/part-of: kubeflow
        app.kubernetes.io/version: v0.7.0
        kustomize.component: pytorch-operator
        name: pytorch-operator
    spec:
      containers:
      - command:
        - /pytorch-operator.v1
        - --alsologtostderr
        - -v=1
        - --monitoring-port=8443
        image: gcr.io/kubeflow-images-public/pytorch-operator:v0.7.0
        name: pytorch-operator
      serviceAccountName: pytorch-operator
