base/tf-job-operator.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/path: /metrics
    prometheus.io/port: "8443"
    prometheus.io/scrape: "true"
  labels:
    app: tf-job-operator
    app.kubernetes.io/component: tfjob
    app.kubernetes.io/instance: tf-job-operator-v0.7.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: tf-job-operator
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v0.7.0
    kustomize.component: tf-job-operator
  name: tf-job-operator
  namespace: kubeflow
spec:
  ports:
  - name: monitoring-port
    port: 8443
    targetPort: 8443
  selector:
    app.kubernetes.io/component: tfjob
    app.kubernetes.io/instance: tf-job-operator-v0.7.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: tf-job-operator
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v0.7.0
    kustomize.component: tf-job-operator
    name: tf-job-operator
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: tfjob
    app.kubernetes.io/instance: tf-job-operator-v0.7.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: tf-job-operator
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v0.7.0
    kustomize.component: tf-job-operator
  name: tf-job-operator
  namespace: kubeflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: tfjob
      app.kubernetes.io/instance: tf-job-operator-v0.7.0
      app.kubernetes.io/managed-by: kfctl
      app.kubernetes.io/name: tf-job-operator
      app.kubernetes.io/part-of: kubeflow
      app.kubernetes.io/version: v0.7.0
      kustomize.component: tf-job-operator
  template:
    metadata:
      labels:
        app.kubernetes.io/component: tfjob
        app.kubernetes.io/instance: tf-job-operator-v0.7.0
        app.kubernetes.io/managed-by: kfctl
        app.kubernetes.io/name: tf-job-operator
        app.kubernetes.io/part-of: kubeflow
        app.kubernetes.io/version: v0.7.0
        kustomize.component: tf-job-operator
        name: tf-job-operator
    spec:
      containers:
      - command:
        - /opt/kubeflow/tf-operator.v1
        - --alsologtostderr
        - -v=1
        - --monitoring-port=8443
        image: gcr.io/kubeflow-images-public/tf_operator:v0.7.0
        name: tf-job-operator
      serviceAccountName: tf-job-operator
